# nano-pow-server

./: .clang-format.base  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: artifacts.yml  tests.yml
ci/: clang-format-all.sh  travis-deploy.sh
ci/actions/: build.sh  deploy.sh
ci/actions/windows/: build.ps1  configure.bat  deploy.ps1
public/: app.css  app.js  app_queue.js  app_router.js  index.html
src/entry/: nano_pow_server.cpp
src/tests/: work.cpp
src/workserver/: config.hpp  util.hpp  webserver.hpp  work_handler.cpp  work_handler.hpp
util/build_prep/: bootstrap_boost.sh
util/samples/nodejs/: README.md  index.js  package.json
